# exchanges

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  diesel.toml
crates/database/: Cargo.toml
crates/database/migrations/2023-05-05-102429_initial/: down.sql  up.sql
crates/database/migrations/2023-05-22-130441_amount_sum_numeric/: down.sql  up.sql
crates/database/migrations/2023-05-24-085424_exchanges_grouped_pkey/: down.sql  up.sql
crates/database/migrations/2023-06-06-135019_exchange_aggregates/: down.sql  up.sql
crates/database/migrations/2023-08-09-095701_price_column/: down.sql  up.sql
crates/database/migrations/2023-08-09-103152_daily_aggregates/: down.sql  up.sql
crates/database/migrations/2023-08-24-061946_buy_sell_column/: down.sql  up.sql
crates/database/migrations/2023-08-24-065150_aggregates_by_user_and_pair/: down.sql  up.sql
crates/database/migrations/2023-09-25-161654_add_avg_price_col/: down.sql  up.sql
crates/database/src/lib/: config.rs  db.rs  lib.rs  schema.rs
crates/exchanges-api/: Cargo.toml
crates/exchanges-api/src/: error.rs  main.rs  timerange.rs
crates/exchanges-api/src/api/: mod.rs  repo.rs  server.rs
crates/exchanges-api/src/config/: api.rs  mod.rs
crates/exchanges-api/src/gateways/: assets.rs  mod.rs
crates/exchanges-consumer/: Cargo.toml
crates/exchanges-consumer/src/: error.rs  main.rs
crates/exchanges-consumer/src/config/: consumer.rs  mod.rs
crates/exchanges-consumer/src/consumer/: mod.rs  updates.rs
crates/exchanges-consumer/src/consumer/storage/: mod.rs  pg.rs
crates/shared/: Cargo.toml
crates/shared/src/: bigdecimal.rs  lib.rs  waves.rs
