[package]
name = "database"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
bigdecimal.workspace = true
diesel.workspace = true
diesel-derive-enum.workspace = true
diesel_migrations.workspace = true
envy.workspace = true
r2d2.workspace = true
serde.workspace = true
wavesexchange_liveness.workspace = true

[lib]
name = "database"
path = "src/lib/lib.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"
