[package]
name = "exchanges-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bigdecimal.workspace = true
cached.workspace = true
chrono.workspace = true
diesel.workspace = true
envy.workspace = true
fragstrings.workspace = true
futures.workspace = true
humantime-serde.workspace = true
itertools.workspace = true
r2d2.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
thiserror.workspace = true
tokio.workspace = true
warp.workspace = true
wavesexchange_apis.workspace = true
wavesexchange_loaders.workspace = true
wavesexchange_log.workspace = true
wavesexchange_warp.workspace = true

# Local deps
database.workspace = true
shared.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"
